--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/runtime": "^7.9.6",
     "@types/parcel-env": "^0.0.0",
+    "@types/suncalc": "^1.8.0",
     "autoprefixer": "^9.7.6",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-subresource-integrity": "^0.3.4",
@@ -36,6 +37,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "copy-to-clipboard": "^3.3.1"
+    "copy-to-clipboard": "^3.3.1",
+    "suncalc": "^1.8.0"
   }
 }
