migrate to modern yarn

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mc-tyime",
-  "version": "0.1.0",
+  "packageManager": "yarn@3.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
