--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "xo"
   },
   "dependencies": {
     "next": "12.1.1",
@@ -17,8 +17,11 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
-    "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
-    "typescript": "4.6.3"
+    "eslint-config-xo-react": "^0.27.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "typescript": "4.6.3",
+    "xo": "^0.48.0"
   }
 }
