--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "next": "12.1.1",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-jsx": "^5.0.1",
+    "suncalc": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/suncalc": "^1.8.1",
     "eslint-config-next": "12.1.1",
     "eslint-config-xo-react": "^0.27.0",
     "eslint-plugin-react": "^7.29.4",
