--- a/.xo-config.json
+++ b/.xo-config.json
@@ -48,7 +48,7 @@
       }]
     }],
 
-    "node/file-extension-in-import": 0,
+    "@next/next/no-img-element": 0,
 
     "unicorn/filename-case": 0,
     "unicorn/no-array-reduce": 0,
@@ -65,6 +65,8 @@
     }],
 
     "@typescript-eslint/naming-convention": 0,
+    "@typescript-eslint/consistent-type-definitions": 0,
+    "@typescript-eslint/no-confusing-void-expression": 0,
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": 0
   }
 }
