--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,9 @@
 
 # dependencies
 /node_modules
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -28,7 +24,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -38,3 +33,13 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
+
+# cdn
+/public/cdn/
+
+# test files
+*.tar
+*.tar.gz
+*.tgz
+*.zip
