--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
   "name": "minecraft-time",
-  "packageManager": "yarn@3.2.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "xo"
+    "lint": "prettier --check . && eslint pages components lib",
+    "format": "prettier --write . && eslint pages components lib --fix",
+    "fmt": "pnpm run format",
+    "test": "pnpm run lint"
   },
   "dependencies": {
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.2",
-    "next": "12.2.5",
+    "next": "15.2.1",
     "next-themes": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "styled-jsx": "^5.0.5",
     "suncalc": "^1.9.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.14",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
+    "@luludev/eslint-config": "^0.6.4",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@types/suncalc": "^1.8.1",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-xo-react": "^0.27.0",
-    "eslint-plugin-react": "^7.31.5",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "4.8.2",
-    "xo": "^0.52.3"
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.3",
+    "typescript": "5.8.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@angular-eslint/eslint-plugin": "-",
+      "@angular-eslint/eslint-plugin-template": "-",
+      "@angular-eslint/template-parser": "-",
+      "astro-eslint-parser": "-",
+      "eslint-plugin-astro": "-",
+      "eslint-plugin-cypress": "-",
+      "eslint-plugin-rxjs": "-",
+      "eslint-plugin-rxjs-angular": "-",
+      "eslint-plugin-svelte3": "-",
+      "eslint-plugin-vue": "-",
+      "vue-eslint-parser": "-"
+    }
   }
 }
